tests/baselines/reference/parserContinueStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserContinueStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/parser/ecmascript5/Statements/parserContinueStatement1.d.ts(1,1): error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserContinueStatement1.d.ts (2 errors) ====
    continue;
    ~~~~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    ~~~~~~~~~
!!! error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.